--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,7 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
+     <script src="https://js.paystack.co/v1/inline.js"></script>  
   </head>
 
   <body>
